# cutechess

./: .appveyor.yml  .clang-format  .gitignore  .lgtm.yml  .travis.yml  .version  AUTHORS  CHANGELOG.md  CMakeLists.txt  INSTALL  README  README.md  TODO  api.doxygen  cutechess.pro  forking-repo  release-tool  sloppygui.pro  todo.txt  version.pri
.builds/: archlinux.yml  debian.yml  freebsd.yml  ubuntu.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/codeql/cpp-queries/: qlpack.yml  qt-map-keys.ql
.github/workflows/: build.yml  codeql.yml  coverity.yml  release.yml
.lgtm/cpp-queries/: commaexpr-in-ifstmt.ql  qt-map-values.ql  qt-qfileinfo-exists.ql  returning-void-expression.ql
docs/: cutechess-cli.6  cutechess-cli.6.html  cutechess-cli.6.txt  cutechess-cli.txt  cutechess-engines.json.5  cutechess-engines.json.5.html  cutechess-engines.json.5.txt  cutechess.txt  engines.json.5  man-style.css  mk-html-txt.sh
docs/api/: README  api.doxygen  qt.tag
docs/man/: cutechess-cli.6.txt  cutechess.6.txt  sloppygui.6.txt
projects/: projects.pro
projects/cli/: cli.pro
projects/cli/res/: res.pri
projects/cli/res/doc/: doc.qrc  help.txt
projects/cli/src/: cutechesscoreapp.cpp  cutechesscoreapp.h  enginematch.cpp  enginematch.h  main.cpp  matchparser.cpp  matchparser.h  src.pri
projects/gui/: gui.pri  gui.pro
projects/gui/res/: Info.plist  res.pri
projects/gui/res/buttons/: buttons.qrc
projects/gui/res/chessboard/: COPYING  chessboard.qrc  makruk.txt  merida.txt
projects/gui/res/icons/: cutechess_32x32.xpm  cutechess_mac.icns  cutechess_win.rc  icons.qrc
projects/gui/src/: autoverticalscroller.cpp  autoverticalscroller.h  boardsettingsdialog.cpp  boardsettingsdialog.h  boardsettingswidget.cpp  boardsettingswidget.h  capturedpieceswidget.cpp  capturedpieceswidget.h  chessboardmodel.cpp  chessboardmodel.h  chessboardview.cpp  chessboardview.h  chessclock.cpp  chessclock.h  cutechessapp.cpp  cutechessapp.h  engineconfigproxymodel.cpp  engineconfigproxymodel.h  engineconfigurationdlg.cpp  engineconfigurationdlg.h  engineconfigurationmodel.cpp  engineconfigurationmodel.h  enginemanagementdlg.cpp  enginemanagementdlg.h  enginemanagementwidget.cpp  enginemanagementwidget.h  engineoptiondelegate.cpp  engineoptiondelegate.h  engineoptionmodel.cpp  engineoptionmodel.h  engineselectiondlg.cpp  engineselectiondlg.h  evalhistory.cpp  evalhistory.h  evalwidget.cpp  evalwidget.h  gamedatabasedlg.cpp  gamedatabasedlg.h  gamedatabasemanager.cpp  gamedatabasemanager.h  (+90 more)
projects/gui/ui/: boardsettingsdlg.ui  boardsettingswidget.ui  engineconfigdlg.ui  enginemanagementdlg.ui  enginemanagementwidget.ui  engineselectiondlg.ui  gamedatabasedlg.ui  gamedatabasesearchdlg.ui  gamepropertiesdlg.ui  gamesettingswidget.ui  importprogressdlg.ui  lol.qml  newgamedlg.ui  newtournamentdlg.ui  pairtimecontroldlg.ui  qml.qrc  resultformatdlg.ui  resultformatwidget.ui  settingsdlg.ui  timecontroldlg.ui  timecontrolwidget.ui  tournamentsettingswidget.ui  ui.pri
projects/lib/: .qmake.stash  lib.pri  lib.pro  libexport.pri
projects/lib/benchmarks/: benchmarks.pri  benchmarks.pro
projects/lib/res/: res.pri
projects/lib/src/: chessengine.cpp  chessengine.h  chessgame.cpp  chessgame.h  chessplayer.cpp  chessplayer.h  classregistry.h  econode.cpp  econode.h  elo.cpp  elo.h  enginebuilder.cpp  enginebuilder.h  enginebuttonoption.cpp  enginebuttonoption.h  enginecheckoption.cpp  enginecheckoption.h  enginecombooption.cpp  enginecombooption.h  engineconfiguration.cpp  engineconfiguration.h  enginefactory.cpp  enginefactory.h  enginemanager.cpp  enginemanager.h  engineoption.cpp  engineoption.h  engineoptionfactory.cpp  engineoptionfactory.h  engineprocess.cpp  engineprocess.h  engineprocess_win.cpp  engineprocess_win.h  enginesettings.cpp  enginesettings.h  enginespinoption.cpp  enginespinoption.h  enginetextoption.cpp  enginetextoption.h  epdrecord.cpp  (+75 more)
projects/lib/tests/: tests.pri  tests.pro
res/: res.pri
res/chessboard/: chessboard.qrc
src/: chessboarditem.cpp  chessboarditem.h  chessboardsquareitem.cpp  chessboardsquareitem.h  chessboardview.cpp  chessboardview.h  chessboardwidget.cpp  chessboardwidget.h  chessclock.cpp  chessengine.cpp  chessengine.h  chessgame.cpp  chessgame.h  chessplayer.cpp  chessplayer.h  engineconfiguration.cpp  engineconfiguration.h  engineconfigurationdlg.cpp  engineconfigurationdlg.h  engineconfigurationmodel.cpp  engineconfigurationmodel.h  enginemanagementdlg.cpp  enginemanagementdlg.h  gameeventlistener.h  gamemanager.cpp  gamemanager.h  graphicschessboarditem.cpp  graphicschessboarditem.h  graphicschessboardsquareitem.cpp  graphicschessboardsquareitem.h  graphicschesspiece.cpp  graphicschesspiece.h  guilogger.cpp  guilogger.h  loggerbase.h  logmanager.cpp  logmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  (+18 more)
src/base/: chessengine.h  chessgame.cpp  chessgame.h  pgngame.cpp  pgngame.h  symbols.h  uciengine.h  xboardengine.cpp  xboardengine.h
src/base/chessboard/: chessboard.cpp  chessboard.h  fen.cpp  openingbook.h  polyglotbook.cpp  zobrist.cpp
src/chessboard/: archbishop.cpp  archbishop.h  bishop.cpp  bishop.h  capablancachessboard.cpp  capablancachessboard.h  castlingrights.cpp  castlingrights.h  chancellor.cpp  chancellor.h  chess.h  chessboard.cpp  chessboard.h  chessmove.cpp  chessmove.h  chesspiece.cpp  chesspiece.h  completechessmove.cpp  completechessmove.h  fen.cpp  fen.h  king.cpp  king.h  knight.cpp  knight.h  magicmoves.cpp  magicmoves.h  makemove.cpp  movegen.cpp  movegen.h  movenotation.cpp  movestring.cpp  notation.cpp  notation.h  openingbook.cpp  openingbook.h  pawn.cpp  pawn.h  polyglotbook.h  queen.cpp  (+9 more)
src/components/hintlineedit/: hintlineedit.pro
src/gui/: chessclock.h  engineconfigurationdlg.h  enginemanagementdlg.cpp  graphicschessboarditem.cpp  graphicschessboarditem.h  mainwindow.cpp  newgamedlg.cpp
tests/chessboard/: test_board.cpp
tools/: clop-cutechess-cli.py  src-entries.sh  tagtrimmer.cpp  tagtrimmer.pro  test-svn-eol.sh
translations/: cutechess_zh_CN.ts
ui/: engineconfigdlg.ui  enginemanagementdlg.ui
(+270 files in other folders)
